--- a/react-task-manager-front/src/App.css
+++ b/react-task-manager-front/src/App.css
@@ -33,3 +33,13 @@
 .green {
   background-color: green;
 }
+
+.blur {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(2px);
+  background-color: rgba(0, 0, 0, 0.3);
+}
